--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -50,6 +50,34 @@
 			</fieldset>
 		</form>
 
+		<hr />
+		<form th:action="@{/tran}" th:object="${foodPriceForm}" method="post">
+			<fieldset>
+
+				<legend>トランザクションテスト用</legend>
+
+				<div class="form-group"
+					th:classappend="${#fields.hasErrors('name')}? 'has-error has-feedback'">
+					<label for="name" class="control-label">商品名</label> <input
+						type="text" name="name" th:field="*{name}" class="form-control" />
+					<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+						class="help-block">エラーメッセージ表示領域</span>
+				</div>
+
+				<div class="form-group"
+					th:classappend="${#fields.hasErrors('price')}? 'has-error has-feedback'">
+					<label for="price" class="control-label">価格</label> <input
+						type="text" name="price" th:field="*{price}" class="form-control" />
+					<span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"
+						class="help-block">エラーメッセージ表示領域</span>
+				</div>
+
+				<input type="hidden" name="id" th:value="*{id}" />
+				<button type="submit" class="btn btn-danger btn-lg btn-block">トランザクションテスト用</button>
+
+			</fieldset>
+		</form>
+
 	</div>
 
 	<script
